# MEPhI-CTF-Lectures

./: README.md
Lecture01/: sage_crypto.ipynb
Lecture03/: GroupsRingsFields.ipynb
Lecture04/: Advances.ipynb  ECDSA_attacks.ipynb  EllipticCurves.ipynb
Lecture04/EllipticCurves/: EllipticCurves.md
Lecture04/test/: bsgs.sage
Lecture05/: AES.ipynb  Hashes.ipynb  compression.py  examples.ipynb
Lecture06/: Untitled.ipynb  VectorSpaces.ipynb  VectorSpaces.sync-conflict-20250223-124819-2OZNTRS.ipynb
Lecture07/: sage_crypto.ipynb
Lecture08/: CA.ipynb  Lattices and Number Theory.ipynb
Lecture09/: EllipticCurves.ipynb  signatures.ipynb
Lecture1/: python_crypto.ipynb
Lecture10/: abi.json  pihton.ipynb  saga.ipynb  simple.sol
Lecture10/phdays/antirugpull/: abi.json  mintable.sol  solve.py
Lecture10/phdays/dao_1/: abi.json  sign.py  solve.py  utils.py
Lecture10/phdays/dao_2/: dao.sol  pyproject.toml  s1.sol  solve.py  tmp.py  utils.py
Lecture10/phdays/wrappedether/: abi.json  attack.sol  solve.py  task.sol
Lecture2/: Algebra1.ipynb
Lecture3/: DLP_attacks.ipynb
Lecture4/: Advances.ipynb  ECDH_attacks.ipynb  ECDSA_attacks.ipynb  EllipticCurves.ipynb
Lecture4/test/: quad.sage
Lecture5/: AES.ipynb  ChaCha.ipynb  Hashes.ipynb
Lecture6/: Lattices.ipynb  Lattices.sync-conflict-20250223-124819-2OZNTRS.ipynb
Lecture7/: Algebra1.ipynb  Groups.ipynb  python_crypto.ipynb
Lecture8/: CA.ipynb  CS.ipynb  Lattices and Number Theory.ipynb  Untitled.ipynb
